Fix DataInitializer y Dockerfile